apps/wiki.js/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wiki
  labels:
    app.kubernetes.io/name: wiki.js
