apps/wiki.js/wikijs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
  namespace: wiki
  labels:
    app.kubernetes.io/name: wiki.js
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wiki.js
  template:
    metadata: 
      labels:
        app.kubernetes.io/name: wiki.js
    spec:
      containers:
      - name: wikijs
        image: requarks/wiki:2
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 25m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 512Mi
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: wiki
  labels:
    app.kubernetes.io/name: wiki.js
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: wiki.js
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
